# jules-cli

./: .autoheader_cache  CHANGELOG.md  FEATURE_PROPOSAL_TEMPLATE  GEMINI_PYTEST_PROTOCOLS.md  JULES_INTEGRATION.md  JULES_SESSION.md  JULES_TASKS.md  README.md  README2.md  ROADMAP.md  config.toml  pyproject.toml  remediation_plan.md  report.json  requirements.txt
.github/workflows/: publish.yml  test.yml
src/jules_cli/: cli.py  db.py
src/jules_cli/commands/: apply.py  auto.py  commit.py  config.py  config_set.py  doctor.py  history.py  init.py  plan.py  pr.py  session.py  stage.py  suggest.py  task.py  workspace.py
src/jules_cli/core/: api.py
src/jules_cli/git/: vcs.py
src/jules_cli/patch/: apply.py
src/jules_cli/pytest/: runner.py
src/jules_cli/testing/: runner.py
src/jules_cli/utils/: commands.py  config.py  (+4 more)
tests/: conftest.py  test_cache.py  test_cli.py  test_cli_coverage.py  test_cli_coverage_more.py  test_cli_extra.py  test_completion.py  test_config_cmd.py  test_conflict_resolver.py  test_db.py  test_db_coverage.py  test_init.py  test_plugins.py  test_test_runners.py  test_vcs_extra.py  test_workspace.py
tests/commands/: __init__.py  test_apply.py  test_auto.py  test_commit.py  test_config.py  test_config_set.py  test_coverage_gap.py  test_coverage_gap_2.py  test_doctor.py  test_doctor_extra.py  test_feature_config.py  test_history.py  test_interact.py  test_interact_extra.py  test_logging_observability.py  test_plan.py  test_pr.py  test_pr_extra.py  test_refactor.py  test_session.py  test_stage.py  test_suggest.py  test_task.py  test_task_unit.py  test_testgen.py
tests/core/: __init__.py  test_api.py  test_api_coverage.py  test_api_extra.py
tests/fixtures/: __init__.py  fake_api.py
tests/git/: __init__.py  test_vcs.py
tests/integration/: test_task_command.py
tests/patch/: __init__.py  test_patch.py
tests/pytest/: __init__.py  test_runner.py
tests/utils/: test_branch.py  test_commands.py  test_config.py  test_environment.py  test_exceptions.py  test_logging.py  test_output.py  test_vcs_unit.py
