[project]
name = "jules-cli"
version = "11.0.0"
description = "A developer CLI for Jules API automation"
readme = "README.md"
    authors = [{ name = "dhruv13x" }]
requires-python = ">=3.8"
dependencies = ["requests"]

[project.scripts]
jules = "jules_cli.cli:app"

[project.entry-points."jules.plugins"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]

addopts = [
    "-v",
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--tb=short",
    "--showlocals",

    "--timeout=10",
    "--durations=10",

    # Coverage
    "--cov=src/jules_cli",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=95",
]

log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
branch = true
source = ["src/jules_cli"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true